@@ -7,6 +7,11 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.1 (2005-04-??)
 --------------------------
 
+- You can now pass the special value ``objc.NULL`` as the value
+  for 'in' and 'inout' arguments. This tells the bridge to pass
+  a NULL pointer to the Objective-C method, instead of a pointer
+  to the value.
+
 - First stab at wrapping some Tiger frameworks:
 
   - ``AppleScriptKit``
